--- a/templates/caisse/client/index.html.twig
+++ b/templates/caisse/client/index.html.twig
@@ -50,6 +50,17 @@
                         <td class="align-middle">{{ client.telephone }}</td>
                         <td class="align-middle">{{ client.createdAt ? client.createdAt|date('d/m/Y H:i') : '' }}</td>
                         <td class="align-middle text-end">
+                            {% set missedCount = missedMap[client.email]|default(0) %}
+                            {% if missedCount > 0 %}
+                                <a href="{{ path('app_client_missed', {'id': client.id}) }}" class="btn btn-sm btn-outline-warning me-1 d-inline-flex align-items-center" title="{{ missedCount }} rendez-vous non honorés">
+                                    <img src="{{ asset('assets/img/lapin.png') }}" alt="Lapin" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 4px;">
+                                    <span class="badge bg-danger rounded-pill">{{ missedCount }}</span>
+                                </a>
+                            {% else %}
+                                <button class="btn btn-sm btn-outline-secondary me-1 d-inline-flex align-items-center" title="Aucun rendez-vous non honoré" disabled>
+                                    <img src="{{ asset('assets/img/lapin.png') }}" alt="Lapin" style="width: 20px; height: 20px; vertical-align: middle; opacity: 0.5;">
+                                </button>
+                            {% endif %}
                             <a href="{{ path('app_client_show', {'id': client.id}) }}" class="btn btn-sm btn-outline-info me-1">
                                 <i class="fas fa-eye"></i>
                             </a>
